Wed May  1 15:15:11 1996  Tom Jarmolowski  <tjj@booklink.com>

	* rcs.c (linevector_add): Move increment of i out of larger
	statement, to avoid assumptions about evaluation order.

Tue Apr 30 15:46:03 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Version 1.7.87.

	* server.c (check_password): Don't use ANSI string concatenation.
	Reindent function.

Wed Apr 24 17:27:53 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* vers_ts.c (Version_TS): xmalloc enough space (1 more
	  byte). Thanks to purify!

Fri Apr 19 11:22:35 1996  Benjamin J. Lee  <benjamin@cyclic.com>

        * Version 1.7.86

Thu Apr 18 1996  Jim Kingdon  <kingdon@cyclic.com>

	* client.c (try_read_from_server): Compare return value from fwrite
	with a size_t not an int (Visual C++ lint).

Wed Apr 17 11:56:32 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (try_read_from_server): New function.
	(read_from_server): Use it.
	(read_counted_file): New function.
	* client.c, server.c: Add Template response.
	* cvs.h (CVSADM_TEMPLATE): Added.
	* logmsg.c (do_editor): If repository is NULL, use CVSADM_TEMPLATE
	file in place of rcsinfo.
	* server.c, server.h (server_template): New function.
	* create_adm.c (Create_Admin): Call it.

Tue Apr 16 13:56:06 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* repos.c (Name_Repository): Fix comments.
	* create_adm.c (Create_Admin): Fix indentation.

Wed Apr 10 16:46:54 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h.in: Include relevant information here rather than
	citing (former) FAQ.

	* ChangeLog-9395: Fix typo in introductory paragraph.

Wed Apr 10 14:55:10 1996  code by Mike Spengler  mks@msc.edu
	comments by Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (unlink_file_dir,deep_remove_dir): Don't call unlink
	on something which might be a directory; check using isdir instead.

Wed Apr 10 14:55:10 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* checkout.c (build_dirs_and_chdir): Pass path, not cp, to